--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,13 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="description" content="Black Excellence Music Project celebrates black artists from past and present" />
+  <meta property='og:title' content='Black Excellence Music Project' />
+  <meta property='og:image' content='./images/linkedin-preview.jpg' />
+  <meta property='og:description' content='Black violinist' />
+  <meta property='og:url' content='https://black-excellence-music-project.netlify.app/#/' />
 
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="/tailwind.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -20,7 +24,6 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-
 </body>
 
 </html>
