--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Black Excellence Music Project celebrates black artists from past and present" />
   <meta property='og:title' content='Black Excellence Music Project' />
-  <meta property='og:image' content='./images/linkedin-preview.jpg' />
+  <meta property='og:image' content='https://i.imgur.com/hgLRhq0.jpg' />
   <meta property='og:description' content='Black violinist' />
   <meta property='og:url' content='https://black-excellence-music-project.netlify.app/#/' />
 
