adding og:url image link

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta property='og:title' content='Black Excellence Music Project' />
   <meta property='og:image' content='https://i.imgur.com/hgLRhq0.jpg' />
   <meta property='og:description' content='Black violinist' />
-  <meta property='og:url' content='https://black-excellence-music-project.netlify.app/#/' />
+  <meta property='og:url' content='https://i.imgur.com/hgLRhq0.jpg' />
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
