resizing image for og:url image link

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Black Excellence Music Project celebrates black artists from past and present" />
   <meta property='og:title' content='Black Excellence Music Project' />
-  <meta property='og:image' content='https://i.imgur.com/hgLRhq0.jpg' />
+  <meta property='og:image' content='https://i.imgur.com/Fj3MbiH.jpg' />
   <meta property='og:description' content='Black violinist' />
-  <meta property='og:url' content='https://i.imgur.com/hgLRhq0.jpg' />
+  <meta property='og:url' content='https://i.imgur.com/Fj3MbiH.jpg' />
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
